testapp/templates/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  #namespace: kubernetes-dashboard
spec: 
  rules: 
  - host: dashboard.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend: 
          service:
            name: mongo-express-service
            port:
              number: 8081 #test comment
